@@ -14,7 +14,6 @@ public Interp() {}
 // Used ONLY by ReflectObject
 Hashtable reflectObjTable = null;
 long reflectObjCount = 0;
-Hashtable reflectIDTable = null;
 Hashtable reflectConflictTable = null;
 
 // Used ONLY by JavaImportCmd
