@@ -1,3 +1,12 @@
+2000-07-29  Mo DeJong  <mdejong@redhat.com>
+
+	* src/empty/empty.jar: Regen.
+	* src/empty/tcl/lang/Interp.java:
+	* src/jacl/tcl/lang/Interp.java:
+	* src/native/javaInterp.c:
+	* src/tclblend/tcl/lang/Interp.java:
+	* src/tcljava/tcl/lang/ReflectObject.java:
+
 2000-07-16  Christian Krone  <krischan@sql.de>
 
 	* src/jacl/tcl/lang/ClockCmd.java: Upgrade
